--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.30.0
-langchain==0.1.16
-langchain-community==0.0.32
+streamlit
+langchain
+langchain-community
 langchain-google-genai
 google-generativeai
 faiss-cpu
